fix message-pane spacing

--- a/res/default.css
+++ b/res/default.css
@@ -307,7 +307,7 @@ ul {
 	margin: 30px 200px 31px 0;
 	background-color: #eee;
 	font-size: 13px;
-	padding: 0 5px 10px 5px;
+	padding: 0 5px;
 }
 
 .message-pane {
